--- a/.github/workflows/doxy-pages.yml
+++ b/.github/workflows/doxy-pages.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Clonar repositório
         uses: actions/checkout@v3
+        with:
+          submodules: recursive
 
       - name: Instalar dependências
         run: sudo apt-get update && sudo apt-get install -y doxygen graphviz
